[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/Trail.tscn" type="PackedScene" id=1]
[ext_resource path="res://img/star_1.png" type="Texture" id=2]
[ext_resource path="res://img/player_projectile.png" type="Texture" id=3]
[ext_resource path="res://img/projectile.png" type="Texture" id=4]
[ext_resource path="res://code/collisionfx.gd" type="Script" id=5]
[ext_resource path="res://code/Projectile_Area.gd" type="Script" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 3.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1, 1 )

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
spread = 30.0
gravity = Vector3( 0, 0, 0 )
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[node name="Projectile" type="Area2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 6 )

[node name="Trail" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( 0, 0 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 5.0
margin_top = 5.0
margin_right = 45.0
margin_bottom = 19.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="current" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="prior" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="rect" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="collisionfx" type="Particles2D" parent="."]
emitting = false
amount = 4
lifetime = 0.2
one_shot = true
explosiveness = 0.75
process_material = SubResource( 2 )
texture = ExtResource( 2 )
script = ExtResource( 5 )

[node name="main_sprites" type="Node2D" parent="."]

[node name="enemy_sprite" type="Sprite" parent="main_sprites"]
visible = false
z_index = 1
texture = ExtResource( 4 )

[node name="player_sprite" type="Sprite" parent="main_sprites"]
visible = false
z_index = 1
texture = ExtResource( 3 )

[node name="Tween" type="Tween" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Projectile_body_entered"]
